PCA ind 2D updated and PCA in natural images is done

--- a/PCA - notebook.ipynb
+++ b/PCA - notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:722412187f1ef6bfd5e5e30236be0d9bfeb164a0556b9147255f081ec4f50893"
+  "signature": "sha256:a14b31f0154271bc5aa70bd4b3afd78e320cfdb3c9452540544cee304e8a7ac7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -20,9 +20,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Below you can find the PCA in 2D tutorial of UFLDL http://ufldl.stanford.edu/wiki/index.php/Exercise:PCA_in_2D\n",
-      "\n",
-      "Discussion of the tutorial is under construction."
+      "Below you can find the PCA in 2D tutorial of UFLDL http://ufldl.stanford.edu/wiki/index.php/Exercise:PCA_in_2D"
      ]
     },
     {
@@ -38,6 +36,18 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 1
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Step 0: Load data\n",
+      "We have provided the code to load data from pcaData.txt into x.\n",
+      "x is a 2 * 45 matrix, where the kth column x(:,k) corresponds to\n",
+      "the kth data point.Here we provide the code to load natural image data into x. \n",
+      "\n",
+      "This of course has been translated to python for the sake of the assignment."
+     ]
     },
     {
      "cell_type": "code",
@@ -71,6 +81,13 @@
      "prompt_number": 9
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Below we plot the data as it is distributed along the both axis that represent the number of characteristics"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -90,6 +107,25 @@
       }
      ],
      "prompt_number": 10
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Step 1a: Implement PCA to obtain U \n",
+      "Implement PCA to obtain the rotation matrix U, which is the eigenbasis\n",
+      "sigma. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Then we get the covariance matrix, this was possible due to the fact that data was already normalized.\n",
+      "Then we use numpy.linealg to get Single Value Decomposition. u ands s are the eigenvectors and the eigenvalues respectively.\n",
+      "\n",
+      "$\\Sigma = \\frac{1}{m}\\sum_{i=1}^{m}{(x^{(i)})(x^{(i)})^T}$"
+     ]
     },
     {
      "cell_type": "code",
@@ -123,6 +159,13 @@
       }
      ],
      "prompt_number": 39
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "These are the axes that constitute the eigenvectors"
+     ]
     },
     {
      "cell_type": "code",
@@ -186,6 +229,22 @@
      "prompt_number": 15
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Step 1b: Compute xRot, the projection on to the eigenbasis\n",
+      "Now, compute xRot by projecting the data on to the basis defined\n",
+      "by U. Visualize the points by performing a scatter plot."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "To get the data rotated we get the dot product between the eigenvectors transpose and the data"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
@@ -205,6 +264,20 @@
       }
      ],
      "prompt_number": 16
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Step 2: Reduce the number of dimensions from 2 to 1. \n",
+      "Compute xRot again (this time projecting to 1 dimension).\n",
+      "Then, compute xHat by projecting the xRot back onto the original axes \n",
+      "to see the effect of dimension reduction\n",
+      "\n",
+      "We would like to usually retain at leat 99% of variance:\n",
+      "\n",
+      "$\\frac{\\sum_{i=1}^{k}{\\lambda_j}}{\\sum_{i=1}^{n}{\\lambda_j}}\\geq{0.99}$"
+     ]
     },
     {
      "cell_type": "code",
@@ -240,10 +313,18 @@
      "prompt_number": 55
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 2,
      "metadata": {},
      "source": [
       "Whitening"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Then to do whitening we have to use the following formula $x_{PCAWhite, i} = \\frac{x_{rot,i}}{\\sqrt{\\lambda_i}}$"
      ]
     },
     {
@@ -349,14 +430,6 @@
       }
      ],
      "prompt_number": 65
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
     }
    ],
    "metadata": {}
